--- a/css/main.css
+++ b/css/main.css
@@ -65,13 +65,13 @@ main
   width: 80%;
 }
 
-.graphContainer
+#graphContainer
 {
   padding: 10px;
   margin: auto;
 }
 
-.graphContainer ul li
+#graphContainer ul li
 {
   list-style: none;
   padding: 150px;
