--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,69 @@
   flex-direction: column;
 }
 
+/* Header */
+
+.welcomeHeader
+{
+  width: 25%;
+  margin: 0 auto 12px;
+  text-align: center;
+  padding-bottom: 15px;
+  border-bottom: 1px #ededed solid;
+}
+
+/* Filters */
+
+#filtersContainer
+{
+
+}
+
+.filterNodeContainer
+{
+  display: flex;
+  background-color: aliceblue;
+  border-radius: 20px;
+  justify-content: space-between;
+  margin: 0 auto 15px;
+  padding: 5px 20px;
+  width: 50%;
+}
+
+.filterLabel
+{
+  font-size: 1.1em;
+}
+
+/* Results */
+
+#resultsContainer
+{
+  display: flex;
+  justify-content: space-around;
+  margin-top: 10px;
+  padding: 20px;
+}
+
+.resultsItem
+{
+  background-color: #cdcdcd;
+  border: none;
+  border-radius: 10px;
+  text-align: center;
+  margin: 5px;
+  padding: 10px 0;
+  width: 30%;
+  cursor: pointer;
+  -webkit-transition: background-color .25s; /* For Safari 3.1 to 6.0 */
+  transition: background-color .25s;
+}
+
+.resultsItem:hover
+{
+  background-color: #adadad;
+}
+
 /* Sidebar */
 
 aside
@@ -43,6 +106,8 @@ aside
   padding: 10px 0;
   width: 100%;
   cursor: pointer;
+  -webkit-transition: background-color .25s; /* For Safari 3.1 to 6.0 */
+  transition: background-color .25s;
 }
 
 .featuredItem:hover
@@ -54,7 +119,45 @@ aside
 
 .arrowContainer
 {
-  padding: 10px 20px;
+  padding: 10px;
+}
+
+#arrow
+{
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+  color: #ededed;
+  box-sizing: border-box;
+  width: 20px;
+  height: 20px;
+  border-width: 4px 4px 0 0;
+  border-style: solid;
+  margin: 10px;
+  transform: rotate(-135deg);
+  -webkit-transition: color .25s; /* For Safari 3.1 to 6.0 */
+  transition: color .25s;
+  &:before
+  {
+    right: 0;
+    top: -3px;
+    position: absolute;
+    height: 4px;
+    box-shadow: inset 0 0 0 32px;
+    transform: rotate(-45deg);
+    width: 23px;
+    transform-origin: right top;
+  }
+  &:after, &:before
+  {
+    content: "";
+    box-sizing: border-box;
+  }
+}
+
+#arrow:hover
+{
+  color: #adadad;;
 }
 
 .mainContainer
@@ -93,6 +196,35 @@ main
   padding: 20px;
 }
 
+/* Related */
+
+.relatedContainer
+{
+  padding: 20px;
+}
+
+#relatedContainer
+{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.relatedItem
+{
+  margin-right: 10px;
+  padding: 10px;
+  border-radius: 20px;
+  background-color: aliceblue;
+  cursor: pointer;
+  -webkit-transition: background-color .25s; /* For Safari 3.1 to 6.0 */
+  transition: background-color .25s;
+}
+
+.relatedItem:hover
+{
+  background-color: #c9e6ff;
+}
+
 /* Text Hierarchy */
 
 .title
@@ -103,63 +235,4 @@ main
 .subtitle
 {
   font-family: 'Montserrat', sans-serif;
-}
-
-
-/* Filter */
-#filtersContainer
-{
-
-}
-.filterNodeContainer
-{
-  background-color: grey;
-}
-.filterLabel
-{
-  color: green;
-  font-size: 24px;
-}
-.filterSelect
-{
-  height: 40px;
-}
-.filterOption
-{
-  color: blue;
-}
-
-/* Results */
-#resultsContainer
-{
-
-}
-.resultsItem
-{
-  width: 200px;
-  height:120px;
-  background-color: green;
-  cursor: pointer;
-}
-.resultsItemText
-{
-  font-size: 18px;
-  color:white;
-}
-
-/* Related */
-#relatedContainer{
-    background-color: grey;
-}
-.relatedItem
-{
-    width: 200px;
-    height:120px;
-    background-color: yellow;
-    cursor: pointer;
-}
-.relatedItemText
-{
-    font-size: 18px;
-    color:orange;
 }
